--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@
 }
 /* footer styling */
 #footer {
+    
     background-color: #808080;
+    text-align: center;
+}
+.footer-container{
     text-align: center;
 }
